# serializer version: 1
# name: test_api_error
  '''
  <div id="services-search-results">
      <div class="c-box c-box--results mb-3 mb-md-4">
          <div class="c-box--results__body">
              <div class="alert alert-warning" role="status">
                  <div class="row">
                      <div class="col-auto pe-0">
                          <i aria-hidden="true" class="ri-error-warning-line ri-xl text-warning">
                          </i>
                      </div>
                      <div class="col">
                          <p class="mb-0">
                              Une erreur est survenue lors de l'appel à
                              <a class="has-external-link" href="https://data.inclusion.gouv.fr/" rel="noopener" target="_blank">
                                  data·inclusion
                              </a>
                              . Veuillez réessayer ultérieurement.
                          </p>
                      </div>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: test_results_html
  '''
  <div id="services-search-results">
      <div class="c-box c-box--results has-one-link-inside mb-3 mb-md-4">
          <div class="c-box--results__header">
              <div class="c-box--results__summary">
                  <i aria-hidden="true" class="ri-community-line">
                  </i>
                  <div>
                      <span>
                          Coiffeur
                      </span>
                      <h3>
                          Coupe également les cheveux
                      </h3>
                  </div>
              </div>
              <div class="d-flex flex-column flex-md-row gap-2 align-items-md-end gap-md-3">
                  <ul class="c-box--results__list-contact flex-md-grow-1 mt-2 mb-2 mb-md-0">
                      <li>
                          <i aria-hidden="true" class="ri-map-pin-2-line fw-normal me-1">
                          </i>
                          <address class="m-0">
                              Une adresse en présentiel à Vannes, 56260 Vannes
                          </address>
                          <span class="badge badge-xs rounded-pill bg-light text-primary ms-1">
                              0 km
                          </span>
                      </li>
                  </ul>
                  <div class="mt-md-1">
                      <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/dora-presentiel-vannes?mtm_campaign=lesemplois&mtm_kwd=rechservice-accueil" rel="noopener" target="_blank">
                          <span>
                              Voir la fiche détaillée
                          </span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
                          </i>
                      </a>
                  </div>
              </div>
          </div>
          <hr class="m-0"/>
          <div class="c-box--results__body">
              <p class="mb-2">
                  Coupe également les cheveux longs
              </p>
              <span class="badge badge-xs rounded-pill bg-light text-primary">
                  Source : dora, via data·inclusion
              </span>
          </div>
      </div>
      <div class="c-box c-box--results has-one-link-inside mb-3 mb-md-4">
          <div class="c-box--results__header">
              <div class="c-box--results__summary">
                  <i aria-hidden="true" class="ri-community-line">
                  </i>
                  <div>
                      <span>
                          Coiffeur
                      </span>
                      <h3>
                          Coupe que les cheveux
                      </h3>
                  </div>
              </div>
              <div class="d-flex flex-column flex-md-row gap-2 align-items-md-end gap-md-3">
                  <ul class="c-box--results__list-contact flex-md-grow-1 mt-2 mb-2 mb-md-0">
                      <li>
                          <i aria-hidden="true" class="ri-map-pin-2-line fw-normal me-1">
                          </i>
                          <address class="m-0">
                              56260 Vannes
                          </address>
                          <span class="badge badge-xs rounded-pill bg-light text-primary ms-1">
                              0 km
                          </span>
                      </li>
                  </ul>
                  <div class="mt-md-1">
                      <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/di--autre-presentiel-vannes?mtm_campaign=lesemplois&mtm_kwd=rechservice-accueil" rel="noopener" target="_blank">
                          <span>
                              Voir la fiche détaillée
                          </span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
                          </i>
                      </a>
                  </div>
              </div>
          </div>
          <hr class="m-0"/>
          <div class="c-box--results__body">
              <p class="mb-2">
                  Coupe que les cheveux longs
              </p>
              <span class="badge badge-xs rounded-pill bg-light text-primary">
                  Source : autre, via data·inclusion
              </span>
          </div>
      </div>
      <div class="c-box c-box--results has-one-link-inside mb-3 mb-md-4">
          <div class="c-box--results__header">
              <div class="c-box--results__summary">
                  <i aria-hidden="true" class="ri-community-line">
                  </i>
                  <div>
                      <span>
                          Coiffeur
                      </span>
                      <h3>
                          Coupe tous les cheveux
                      </h3>
                  </div>
              </div>
              <div class="d-flex flex-column flex-md-row gap-2 align-items-md-end gap-md-3">
                  <ul class="c-box--results__list-contact flex-md-grow-1 mt-2 mb-2 mb-md-0">
                      <li>
                          <i aria-hidden="true" class="ri-map-pin-2-line fw-normal me-1">
                          </i>
                          À distance
                      </li>
                  </ul>
                  <div class="mt-md-1">
                      <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/dora-geispolsheim?mtm_campaign=lesemplois&mtm_kwd=rechservice-accueil" rel="noopener" target="_blank">
                          <span>
                              Voir la fiche détaillée
                          </span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
                          </i>
                      </a>
                  </div>
              </div>
          </div>
          <hr class="m-0"/>
          <div class="c-box--results__body">
              <p class="mb-2">
                  Coupe tous les cheveux longs
              </p>
              <span class="badge badge-xs rounded-pill bg-light text-primary">
                  Source : dora, via data·inclusion
              </span>
          </div>
      </div>
      <div class="c-box c-box--results has-one-link-inside mb-3 mb-md-4">
          <div class="c-box--results__header">
              <div class="c-box--results__summary">
                  <i aria-hidden="true" class="ri-community-line">
                  </i>
                  <div>
                      <span>
                          Coiffeur
                      </span>
                      <h3>
                          Coupe aussi les cheveux
                      </h3>
                  </div>
              </div>
              <div class="d-flex flex-column flex-md-row gap-2 align-items-md-end gap-md-3">
                  <ul class="c-box--results__list-contact flex-md-grow-1 mt-2 mb-2 mb-md-0">
                      <li>
                          <i aria-hidden="true" class="ri-map-pin-2-line fw-normal me-1">
                          </i>
                      </li>
                  </ul>
                  <div class="mt-md-1">
                      <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/di--autre-presentiel-nowhere?mtm_campaign=lesemplois&mtm_kwd=rechservice-accueil" rel="noopener" target="_blank">
                          <span>
                              Voir la fiche détaillée
                          </span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
                          </i>
                      </a>
                  </div>
              </div>
          </div>
          <hr class="m-0"/>
          <div class="c-box--results__body">
              <p class="mb-2">
                  Coupe aussi cheveux longs
              </p>
              <span class="badge badge-xs rounded-pill bg-light text-primary">
                  Source : autre, via data·inclusion
              </span>
          </div>
      </div>
      <div class="c-box c-box--results has-one-link-inside mb-3 mb-md-4">
          <div class="c-box--results__header">
              <div class="c-box--results__summary">
                  <i aria-hidden="true" class="ri-community-line">
                  </i>
                  <div>
                      <span>
                          Coiffeur
                      </span>
                      <h3>
                          Coupe les cheveux
                      </h3>
                  </div>
              </div>
              <div class="d-flex flex-column flex-md-row gap-2 align-items-md-end gap-md-3">
                  <ul class="c-box--results__list-contact flex-md-grow-1 mt-2 mb-2 mb-md-0">
                      <li>
                          <i aria-hidden="true" class="ri-map-pin-2-line fw-normal me-1">
                          </i>
                          À distance
                      </li>
                  </ul>
                  <div class="mt-md-1">
                      <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/dora-distanciel-vannes?mtm_campaign=lesemplois&mtm_kwd=rechservice-accueil" rel="noopener" target="_blank">
                          <span>
                              Voir la fiche détaillée
                          </span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
                          </i>
                      </a>
                  </div>
              </div>
          </div>
          <hr class="m-0"/>
          <div class="c-box--results__body">
              <p class="mb-2">
                  Coupe les cheveux longs
              </p>
              <span class="badge badge-xs rounded-pill bg-light text-primary">
                  Source : dora, via data·inclusion
              </span>
          </div>
      </div>
      <div class="c-box c-box--results has-one-link-inside mb-3 mb-md-4">
          <div class="c-box--results__header">
              <div class="c-box--results__summary">
                  <i aria-hidden="true" class="ri-community-line">
                  </i>
                  <div>
                      <span>
                          Coiffeur
                      </span>
                      <h3>
                          Coupe que les cheveux
                      </h3>
                  </div>
              </div>
              <div class="d-flex flex-column flex-md-row gap-2 align-items-md-end gap-md-3">
                  <ul class="c-box--results__list-contact flex-md-grow-1 mt-2 mb-2 mb-md-0">
                      <li>
                          <i aria-hidden="true" class="ri-map-pin-2-line fw-normal me-1">
                          </i>
                          À distance
                      </li>
                  </ul>
                  <div class="mt-md-1">
                      <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/di--autre-distanciel-geispolsheim?mtm_campaign=lesemplois&mtm_kwd=rechservice-accueil" rel="noopener" target="_blank">
                          <span>
                              Voir la fiche détaillée
                          </span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
                          </i>
                      </a>
                  </div>
              </div>
          </div>
          <hr class="m-0"/>
          <div class="c-box--results__body">
              <p class="mb-2">
                  Coupe que les cheveux longs
              </p>
              <span class="badge badge-xs rounded-pill bg-light text-primary">
                  Source : autre, via data·inclusion
              </span>
          </div>
      </div>
      <div class="c-box c-box--results has-one-link-inside mb-3 mb-md-4">
          <div class="c-box--results__header">
              <div class="c-box--results__summary">
                  <i aria-hidden="true" class="ri-community-line">
                  </i>
                  <div>
                      <span>
                          Coiffeur
                      </span>
                      <h3>
                          Coupe entre autres les cheveux
                      </h3>
                  </div>
              </div>
              <div class="d-flex flex-column flex-md-row gap-2 align-items-md-end gap-md-3">
                  <ul class="c-box--results__list-contact flex-md-grow-1 mt-2 mb-2 mb-md-0">
                  </ul>
                  <div class="mt-md-1">
                      <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/di--autre-none-nowhere?mtm_campaign=lesemplois&mtm_kwd=rechservice-accueil" rel="noopener" target="_blank">
                          <span>
                              Voir la fiche détaillée
                          </span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
                          </i>
                      </a>
                  </div>
              </div>
          </div>
          <hr class="m-0"/>
          <div class="c-box--results__body">
              <p class="mb-2">
                  Coupe entre autres les cheveux longs
              </p>
              <span class="badge badge-xs rounded-pill bg-light text-primary">
                  Source : autre, via data·inclusion
              </span>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: test_results_html_link[anonymous]
  '''
  <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/dora-presentiel-vannes?mtm_campaign=lesemplois&mtm_kwd=rechservice-accueil" rel="noopener" target="_blank">
      <span>
          Voir la fiche détaillée
      </span>
      <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
      </i>
  </a>
  
  '''
# ---
# name: test_results_html_link[employer]
  '''
  <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/dora-presentiel-vannes?mtm_campaign=lesemplois&mtm_kwd=rechservice-employer" rel="noopener" target="_blank">
      <span>
          Orienter
      </span>
      <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
      </i>
  </a>
  
  '''
# ---
# name: test_results_html_link[itou_staff]
  '''
  <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/dora-presentiel-vannes?mtm_campaign=lesemplois&mtm_kwd=rechservice-itou_staff" rel="noopener" target="_blank">
      <span>
          Voir la fiche détaillée
      </span>
      <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
      </i>
  </a>
  
  '''
# ---
# name: test_results_html_link[jobseeker]
  '''
  <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/dora-presentiel-vannes?mtm_campaign=lesemplois&mtm_kwd=rechservice-job_seeker" rel="noopener" target="_blank">
      <span>
          Voir la fiche détaillée
      </span>
      <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
      </i>
  </a>
  
  '''
# ---
# name: test_results_html_link[labor_inspector]
  '''
  <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/dora-presentiel-vannes?mtm_campaign=lesemplois&mtm_kwd=rechservice-labor_inspector" rel="noopener" target="_blank">
      <span>
          Voir la fiche détaillée
      </span>
      <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
      </i>
  </a>
  
  '''
# ---
# name: test_results_html_link[prescriber]
  '''
  <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/dora-presentiel-vannes?mtm_campaign=lesemplois&mtm_kwd=rechservice-prescriber" rel="noopener" target="_blank">
      <span>
          Orienter
      </span>
      <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
      </i>
  </a>
  
  '''
# ---
# name: test_results_html_with_zero_distance
  '''
  <div id="services-search-results">
      <div class="c-box c-box--results has-one-link-inside mb-3 mb-md-4">
          <div class="c-box--results__header">
              <div class="c-box--results__summary">
                  <i aria-hidden="true" class="ri-community-line">
                  </i>
                  <div>
                      <span>
                          Coiffeur
                      </span>
                      <h3>
                          La boule à Zéro
                      </h3>
                  </div>
              </div>
              <div class="d-flex flex-column flex-md-row gap-2 align-items-md-end gap-md-3">
                  <ul class="c-box--results__list-contact flex-md-grow-1 mt-2 mb-2 mb-md-0">
                      <li>
                          <i aria-hidden="true" class="ri-map-pin-2-line fw-normal me-1">
                          </i>
                          <address class="m-0">
                              44350 Guérande
                          </address>
                          <span class="badge badge-xs rounded-pill bg-light text-primary ms-1">
                              0 km
                          </span>
                          <span class="badge badge-xs rounded-pill bg-light text-primary">
                              Également disponible à distance
                          </span>
                      </li>
                  </ul>
                  <div class="mt-md-1">
                      <a aria-label="Voir la fiche de Coiffeur sur DORA (ouverture dans un nouvel onglet)" class="btn btn-outline-primary btn-block w-100 w-md-auto white-space-nowrap stretched-link" href="https://dora.inclusion.gouv.fr/services/dora-guerande?mtm_campaign=lesemplois&mtm_kwd=rechservice-accueil" rel="noopener" target="_blank">
                          <span>
                              Voir la fiche détaillée
                          </span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
                          </i>
                      </a>
                  </div>
              </div>
          </div>
          <hr class="m-0"/>
          <div class="c-box--results__body">
              <p class="mb-2">
                  Ne fait que des boules à zéro
              </p>
              <span class="badge badge-xs rounded-pill bg-light text-primary">
                  Source : dora, via data·inclusion
              </span>
          </div>
      </div>
  </div>
  
  '''
# ---
